tests/integration/commands/validate/SPEC-HIERARCHY/01_SPEC-OBJECT-REF_does_not_exist/test.itest
RUN: %reqif validate %S/sample.reqif | filecheck %s --dump-input=fail

CHECK: warning: semantic error: schema error: A <SPEC-HIERARCHY>'s <SPEC-OBJECT-REF> contains a link to a non-existing <SPEC-OBJECT>: _gFhrY2ojEeuExICsU7Acmg
CHECK: Affected fragment:
CHECK: <SPEC-HIERARCHY IDENTIFIER="_gFhrb2ojEeuExICsU7Acmg" LAST-CHANGE="2021-02-08T16:37:07.454+01:00">
